--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,12 @@ sudo: required
 
 warnings_are_errors: true
 
+r_github_packages:
+  - jimhester/covr
+
+after_success:
+  - Rscript -e 'covr::codecov()'
+
 notifications:
   email:
     on_success: change
