moved import statements to single place, pkg level man file using importfrom for both imports now

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,9 @@ export(latest_topics)
 export(new_topics)
 export(topic)
 export(topics_by)
-import(httr)
-import(jsonlite)
+importFrom(httr,GET)
+importFrom(httr,POST)
+importFrom(httr,add_headers)
+importFrom(httr,content)
+importFrom(httr,stop_for_status)
+importFrom(jsonlite,fromJSON)
