--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,11 @@ export(topics_new)
 importFrom(httr,DELETE)
 importFrom(httr,GET)
 importFrom(httr,POST)
+importFrom(httr,PUT)
 importFrom(httr,add_headers)
 importFrom(httr,content)
 importFrom(httr,stop_for_status)
 importFrom(jsonlite,fromJSON)
+importFrom(xml2,read_html)
+importFrom(xml2,xml_find_one)
+importFrom(xml2,xml_text)
