--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: discgolf
 Title: R Client for the Discourse API
 Description: R client for the Discourse API.
-Version: 0.0.4.9300
-Date: 2015-10-12
+Version: 0.0.4.9500
+Date: 2016-02-03
 License: MIT + file LICENSE
 Authors@R: person("Scott", "Chamberlain", role = c("aut", "cre"), email =
     "myrmecocystus@gmail.com")
@@ -10,9 +10,9 @@ URL: https://github.com/sckott/discgolf
 BugReports: https://github.com/sckott/discgolf/issues
 LazyData: true
 Imports:
-    httr (>= 0.6.0),
+    httr (>= 1.0.0),
     jsonlite,
     xml2
 Suggests:
     testthat
-
+RoxygenNote: 5.0.1
