added users fxns, not all in yet bump patch version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,13 @@ export(topic_rename)
 export(topics_by)
 export(topics_latest)
 export(topics_new)
+export(user)
+export(user_activate)
+export(user_create)
+export(user_delete)
+export(user_update_email)
+export(user_update_username)
+export(users_list)
 importFrom(httr,DELETE)
 importFrom(httr,GET)
 importFrom(httr,POST)
