--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,9 @@
 Package: discgolf
-Title: R Client for the Discourse API
-Description: R client for the Discourse API.
+Title: Discourse 'API' Client
+Description: Client for the Discourse 'API'. Discourse is a open source
+    discussion forum platform (<http://www.discourse.org/>). It comes with 'RESTful'
+    API access to an installation. This client requires that you are authorized
+    to access a Discourse installation, either yours or another.
 Version: 0.0.5.9000
 License: MIT + file LICENSE
 Authors@R: person("Scott", "Chamberlain", role = c("aut", "cre"), email =
