added groups methods, #3

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,10 @@ export(category_new_topics)
 export(category_top_topics)
 export(dg_search)
 export(email_settings)
+export(group_create)
+export(group_delete)
+export(group_members)
+export(groups)
 export(list_email)
 export(post_create)
 export(post_edit)
