replace httr with crul fix #8 fix some tests accordingly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,15 +33,7 @@ export(user_delete)
 export(user_update_email)
 export(user_update_username)
 export(users_list)
-importFrom(httr,DELETE)
-importFrom(httr,GET)
-importFrom(httr,POST)
-importFrom(httr,PUT)
-importFrom(httr,add_headers)
-importFrom(httr,content)
-importFrom(httr,http_status)
-importFrom(httr,stop_for_status)
 importFrom(jsonlite,fromJSON)
 importFrom(xml2,read_html)
-importFrom(xml2,xml_find_one)
+importFrom(xml2,xml_find_first)
 importFrom(xml2,xml_text)
