--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Description: Client for the Discourse 'API'. Discourse is a open source
     discussion forum platform (<http://www.discourse.org/>). It comes with 'RESTful'
     API access to an installation. This client requires that you are authorized
     to access a Discourse installation, either yours or another.
-Version: 0.1.0.9400
+Version: 0.1.6.9310
 License: MIT + file LICENSE
 Authors@R: person("Scott", "Chamberlain", role = c("aut", "cre"), email =
     "myrmecocystus@gmail.com")
@@ -12,10 +12,9 @@ URL: https://github.com/sckott/discgolf
 BugReports: https://github.com/sckott/discgolf/issues
 LazyData: true
 Imports:
-    httr (>= 1.1.0),
+    crul (>= 0.3.8),
     jsonlite,
     xml2
 Suggests:
-    testthat,
-    covr
-RoxygenNote: 5.0.1
+    testthat
+RoxygenNote: 6.0.1
