--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: discgolf
-Title: Discourse 'API' Client
-Description: Client for the Discourse 'API'. Discourse is a open source
-    discussion forum platform (<http://www.discourse.org/>). It comes with 'RESTful'
+Title: Discourse API Client
+Description: Client for the Discourse API. Discourse is a open source
+    discussion forum platform (<https://www.discourse.org/>). It comes with 'RESTful'
     API access to an installation. This client requires that you are authorized
     to access a Discourse installation, either yours or another.
-Version: 0.1.6.9310
+Version: 0.2.0
 License: MIT + file LICENSE
 Authors@R: person("Scott", "Chamberlain", role = c("aut", "cre"), email =
     "myrmecocystus@gmail.com")
@@ -12,7 +12,7 @@ URL: https://github.com/sckott/discgolf
 BugReports: https://github.com/sckott/discgolf/issues
 LazyData: true
 Imports:
-    crul (>= 0.3.8),
+    crul (>= 0.4.0),
     jsonlite,
     xml2
 Suggests:
