--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,17 +4,18 @@ Description: Client for the Discourse API. Discourse is a open source
     discussion forum platform (<https://www.discourse.org/>). It comes with 'RESTful'
     API access to an installation. This client requires that you are authorized
     to access a Discourse installation, either yours or another.
-Version: 0.2.0.9100
+Version: 0.2.1.9100
 License: MIT + file LICENSE
 Authors@R: person("Scott", "Chamberlain", role = c("aut", "cre"), email =
     "myrmecocystus@gmail.com")
 URL: https://github.com/sckott/discgolf
 BugReports: https://github.com/sckott/discgolf/issues
 LazyData: true
+Encoding: UTF-8
 Imports:
     crul (>= 0.4.0),
     jsonlite,
     xml2
 Suggests:
     testthat
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
