startred working on reports routes, but not working yet, add pagination to topics and users

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(post_create)
 export(post_get)
 export(post_wikify)
 export(private_messages)
+export(reports_page_views)
 export(topic)
 export(topic_create)
 export(topic_delete)
