update for new roxygen2, update license/coc files

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Description: Client for the Discourse API. Discourse is a open source
     discussion forum platform (<https://www.discourse.org/>). It comes with 'RESTful'
     API access to an installation. This client requires that you are authorized
     to access a Discourse installation, either yours or another.
-Version: 0.2.2.9100
+Version: 0.2.3.92
 License: MIT + file LICENSE
 Authors@R: person("Scott", "Chamberlain", role = c("aut", "cre"), email =
     "myrmecocystus@gmail.com")
@@ -13,9 +13,9 @@ BugReports: https://github.com/sckott/discgolf/issues
 LazyData: true
 Encoding: UTF-8
 Imports:
-    crul (>= 0.4.0),
+    crul,
     jsonlite,
     xml2
 Suggests:
     testthat
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.1
