--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: r
-sudo: false
+os: linux
 cache: packages
 warnings_are_errors: true
 
-r_github_packages:
-  - jimhester/covr
+r_packages:
+  - covr
 
 after_success:
   - Rscript -e 'covr::codecov()'
