fix #12 fix #13 remove key and user and url as fxn params, require to be set via env var or r option

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(group_delete)
 export(group_members)
 export(groups)
 export(list_email)
+export(notifications)
 export(post_create)
 export(post_get)
 export(post_wikify)
