--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Description: Client for the Discourse API. Discourse is a open source
     discussion forum platform (<https://www.discourse.org/>). It comes with 'RESTful'
     API access to an installation. This client requires that you are authorized
     to access a Discourse installation, either yours or another.
-Version: 0.2.3.96
+Version: 0.2.8.91
 License: MIT + file LICENSE
 Authors@R: person("Scott", "Chamberlain", role = c("aut", "cre"), email =
     "myrmecocystus@gmail.com")
@@ -12,6 +12,8 @@ URL: https://github.com/sckott/discgolf
 BugReports: https://github.com/sckott/discgolf/issues
 LazyData: true
 Encoding: UTF-8
+Language: en-US
+Roxygen: list(markdown = TRUE)
 Imports:
     crul,
     jsonlite,
