--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Version: 0.2.8.91
 License: MIT + file LICENSE
 Authors@R: person("Scott", "Chamberlain", role = c("aut", "cre"), email =
     "myrmecocystus@gmail.com")
-URL: https://github.com/sckott/discgolf
+URL: https://github.com/sckott/discgolf, https://sckott.github.io/discgolf/
 BugReports: https://github.com/sckott/discgolf/issues
 LazyData: true
 Encoding: UTF-8
