--- a/.github/workflows/R-check.yml
+++ b/.github/workflows/R-check.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         config:
         - { os: windows-latest, r: 'latest'}
-        - { os: macOS-latest, r: 'latest'}
+        # - { os: macOS-latest, r: 'latest'}
         - { os: macOS-latest, r: 'devel'}
         - { os: ubuntu-16.04, r: '3.5', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
         - { os: ubuntu-16.04, r: 'latest', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
